--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -59,6 +59,9 @@ jobs:
           - os: windows-latest
             cpp_version: 17
             preset: defaults
+          - os: windows-latest
+            cpp_version: 17
+            preset: ClangCL
           # Linux
           #   CMake different C++ versions with clang
           - os: ubuntu-latest
@@ -109,19 +112,3 @@ jobs:
         run: cmake --build cpputest_build --verbose
       - name: Test
         run: ctest --test-dir cpputest_build
-
-  visualstudio-clangcl:
-    runs-on: windows-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main
-      - name: Configure
-        run: >
-          cmake
-          -B build
-          -G "Visual Studio 17 2022"
-          -T ClangCL
-      - name: Build
-        run: cmake --build build --verbose
-      - name: Test
-        run: ctest --test-dir build
