--- a/src/CppUTest/CMakeLists.txt
+++ b/src/CppUTest/CMakeLists.txt
@@ -60,7 +60,7 @@ if(CPPUTEST_PLATFORM STREQUAL "c2000")
         PUBLIC
             $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/../../include/Platforms/c2000>
     )
-elseif(CPPUTEST_PLATFORM STREQUAL "IAR")
+elseif(CPPUTEST_PLATFORM STREQUAL "Iar")
     target_compile_options(CppUTest
         PRIVATE
             --dlib_config full
