--- a/docker/Dockerfile.dos
+++ b/docker/Dockerfile.dos
@@ -4,4 +4,4 @@ RUN apt-get -qq update && apt-get -qq install -y --no-install-recommends dosbox 
 
 WORKDIR /cpputest_build
 
-CMD BUILD=make_dos /cpputest/scripts/travis_ci_build.sh
+CMD ["/cpputest/scripts/dos_build_test.sh"]
