ci: actually run docker builds
qemu and buildx didn't do anything for these builds, and because these
aren't pushed or using private deps, authenticating to docker hub
doesn't do anything

--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -421,20 +421,12 @@ jobs:
     runs-on: ubuntu-latest
     name: Docker ${{ matrix.image }}
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-        env:
-          TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-        if: ${{ env.TOKEN != '' }}
       - name: Build
         uses: docker/build-push-action@v3
         with:
           file: docker/Dockerfile.${{ matrix.image }}
-          tags: cpputest/${{ matrix.image }}
+          tags: cpputest/${{ matrix.image }}:latest
+          push: false
+      - name: Test
+        run: |
+          docker run --rm cpputest/${{ matrix.image }}:latest
