--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -97,6 +97,11 @@ jobs:
             preset: MSVC
             install: true
             ctest_args: -C Debug
+          - name: MSVC 23
+            os: windows-latest
+            cmake_args: -DCMAKE_CXX_STANDARD=23
+            preset: MSVC
+            ctest_args: -C Debug
           - name: MSVC 20
             os: windows-latest
             cmake_args: -DCMAKE_CXX_STANDARD=20
@@ -130,6 +135,10 @@ jobs:
             os: ubuntu-latest
             cmake_args: -DCMAKE_CXX_STANDARD=20
             preset: Clang
+          - name: Linux Clang 23
+            os: ubuntu-latest
+            cmake_args: -DCMAKE_CXX_STANDARD=23
+            preset: Clang
           - name: Linux GNU 98
             os: ubuntu-latest
             cmake_args: -DCMAKE_CXX_STANDARD=98
@@ -156,6 +165,10 @@ jobs:
           - name: Linux GNU 20
             os: ubuntu-latest
             cmake_args: -DCMAKE_CXX_STANDARD=20
+            preset: GNU
+          - name: Linux GNU 23
+            os: ubuntu-latest
+            cmake_args: -DCMAKE_CXX_STANDARD=23
             preset: GNU
           - name: MinGW
             os: ubuntu-latest
@@ -198,6 +211,10 @@ jobs:
           - name: Apple Clang 20
             os: macos-latest
             cmake_args: -DCMAKE_CXX_STANDARD=20
+            preset: Clang
+          - name: Apple Clang 23
+            os: macos-latest
+            cmake_args: -DCMAKE_CXX_STANDARD=23
             preset: Clang
           - name: Mac GNU 14
             os: macos-latest
